fix: Fixed alignment isuues with nested grids

--- a/client/src/components/TimeTable.css
+++ b/client/src/components/TimeTable.css
@@ -1,6 +1,6 @@
 .containerGrid {
   display: grid;
-  grid-template-columns: 10fr 1fr 10fr;
+  grid-template-columns: 12fr 1fr 10fr;
   text-align: center;
   grid-column-gap: 2px;
 }
@@ -8,61 +8,25 @@
 .sectionGridMorning {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(6, minmax(80px, auto));
+  grid-template-rows: repeat(7, minmax(80px, auto));
   text-align: center;
+  overflow-x: scroll;
   background-color: azure;
 }
 
-.sectionGridEvening{
+.sectionGridEvening {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(6, minmax(80px, auto));
+  grid-template-rows: repeat(7, minmax(80px, auto));
   text-align: center;
+  overflow-x: scroll;
   background-color: azure;
-}
-
-.headerGridMorning{
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(2, minmax(80px, auto));
-  grid-column: 1/8;
-  grid-row: 1/3;
-  overflow-x: scroll;
-  background-color: aqua;
-}
-
-.headerGridEvening{
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(2, minmax(80px, auto));
-  grid-column: 1/7;
-  grid-row: 1/3;
-  overflow-x: scroll;
-  background-color: aqua;
-}
-
-.slotsGridMorning{
-  display: block;
-  grid-column: 1/8;
-  grid-row: 3/7;
-  display: grid;
-  grid-template-columns: repeat(7,1Fr);
-  grid-template-rows: repeat(5,1Fr);
-  background-color: chartreuse;
-}
-
-.slotsGridEvening{
-  display: block;
-  display: grid;
-  grid-column: 1/7;
-  grid-row: 3/7;
-  background-color: chartreuse;
 }
 
 .grayLabel {
-  background-color: rgb(192,192,192);
+  background-color: rgb(192, 192, 192);
   text-align: center;
-  padding-top: 20%;
+  padding-top: 25%;
   font-weight: 600;
   border: 1px solid black;
 }
@@ -70,7 +34,7 @@
 .purpleLabel {
   background-color: rgb(203, 205, 251);
   text-align: center;
-  padding-top: 10%;
+  padding: 10%;
   font-weight: 600;
   border: 1px solid black;
 }
@@ -78,36 +42,35 @@
 .blueLabel {
   background-color: rgb(162, 204, 250);
   text-align: center;
-  padding-top: 10%;
+  padding: 10%;
   font-weight: 600;
   border: 1px solid black;
 }
 
-
-.theory{
-    grid-row: 1/2;
+.theory {
+  grid-row: 1/2;
 }
 
-.lab{
-    grid-row: 2/3;
+.lab {
+  grid-row: 2/3;
 }
 
-.mon{
-    grid-row: 1/2;
+.mon {
+  grid-row: 3/4;
 }
 
-.tue{
-    grid-row: 2/3;
-}
-
-.wed{
-    grid-row: 3/4;
-}
-
-.thu{
+.tue {
   grid-row: 4/5;
 }
 
-.fri{
+.wed {
   grid-row: 5/6;
+}
+
+.thu {
+  grid-row: 6/7;
+}
+
+.fri {
+  grid-row: 7/8;
 }
